<resources>
    <string name="app_name">CopyMean</string>
    <string name="clipboard_service_process_name">Clipboard Listener</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Copy and Mean</string>
    <string name="slide_1_desc">Copy the word you want to know and get the meaning of it!!!!</string>
    <string name="slide_2_title">Voice Search</string>
    <string name="slide_2_desc">Tell your words with, we will get you meaning</string>
    <string name="slide_3_title">Notification</string>
    <string name="slide_3_desc">Get notified everyday with the meanings of Critical words</string>
    <string name="slide_4_title">Scan</string>
    <string name="slide_4_desc">Scan word and search</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>

    <!--BottomMenu-->
    <string name="bottom_menu_title_home">Home</string>
    <string name="bottom_menu_title_search">Search</string>
    <string name="bottom_menu_title_list">List</string>
    <string name="bottom_menu_title_settings">Settings</string>

    <!--Settings-->
    <string name="title_category_clipboard">Clipboard</string>
    <string name="key_clipboard_monitor">clipboard_monitor</string>
    <string name="title_clipboard_monitor">Clipboard Monitor</string>
    <string name="summary_clipboard_monitor">Get notified of meanings of words you copy.</string>

    <string name="title_category_notification">Notifications</string>
    <string name="key_daily_word_notify">notify_daily_word</string>
    <string name="title_daily_word_notify">Daily Reminder</string>
    <string name="summary_daily_word_notify">Get notifications about the day\'s word everyday.</string>


    <!-- Notifications -->
    <string name="notification_channel_sticky_name">Sticky Notifications</string>
    <string name="notification_channel_sticky_description">Sticky notifications</string>

    <string name="notification_clipboard_sticky_title">CopyMean is running</string>
    <string name="notification_clipboard_sticky_content">CopyMean is tracking your clipboard.</string>

</resources>
