<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_category_clipboard">
        <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_clipboard_monitor"
                android:summary="@string/summary_clipboard_monitor"
                android:title="@string/title_clipboard_monitor" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_category_notification">
        <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_daily_word_notify"
                android:summary="@string/summary_daily_word_notify"
                android:title="@string/title_daily_word_notify" />
    </PreferenceCategory>


</PreferenceScreen>